2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala:
	* vala/valacatchclause.vala:
	* vala/valadeclarationstatement.vala:
	* vala/valadeletestatement.vala:
	* vala/valadostatement.vala:
	* vala/valaexpressionstatement.vala:
	* vala/valaforstatement.vala:
	* vala/valaifstatement.vala:
	* vala/valainitializerlist.vala:
	* vala/valalocalvariable.vala:
	* vala/valalockstatement.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valaswitchsection.vala:
	* vala/valatrystatement.vala:
	* vala/valawhilestatement.vala:

	Move statement checking to code nodes

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_rmdir binding

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Fix D-Bus methods with out parameters but no return value

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaconstant.vala:
	* vala/valaconstructor.vala:
	* vala/valacreationmethod.vala:
	* vala/valadestructor.vala:
	* vala/valafield.vala:
	* vala/valaformalparameter.vala:
	* vala/valaproperty.vala:
	* vala/valapropertyaccessor.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasignal.vala:

	Move member checking to code nodes

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala:
	* vala/valaenum.vala:
	* vala/valaenumvalue.vala:
	* vala/valaerrorcode.vala:
	* vala/valaerrordomain.vala:
	* vala/valainterface.vala:
	* vala/valanamespace.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:

	Move type symbol checking to code nodes

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala:
	* vala/valasemanticanalyzer.vala:

	Move array creation expression checking to
	ArrayCreationExpression.check

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vala/valathrowstatement.vala:

	Move throw statement checking to ThrowStatement.check

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valareturnstatement.vala:
	* vala/valasemanticanalyzer.vala:
